# ghostblood

./: Cargo.toml  Makefile  build.rs
.cargo/: config.toml
bootloader/: Cargo.toml  Makefile
bootloader/src/: boot.asm  build.sh  disk.asm  kernel.asm  main.rs  print_hex.asm
bootloader/src/asm/: boot.asm  print_hex.asm  println.asm
kernel/: Cargo.toml  Makefile  linker.ld
kernel/src/: kernel.asm  lib.rs  log.rs  main.rs  println.asm  renderer.rs
soulcaster/: Cargo.toml
soulcaster/src/: main.rs
src/: main.rs
