cargo-features = ["per-package-target"]

[package]
name = "soulcaster"
version = "0.1.0"
edition = "2021"
forced-target = "aarch64-apple-darwin"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
color-eyre = "0.6.2"
xshell = "0.2.3"
